2002-06-00  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/UnixFileHandle.m: Avoid some unnecessary autoreleases.

2002-06-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Implemented and documented -className
	* Tools/AGSOutput.m: When Verbose = YES log all documentable
	entities for which no comment text was found.
	* Source/NSException.m: Added NSParseErrorException and tidied other
	general exceptions.
	* Source/extern.m: Removed generic exceptions ... now in NSException.m

2002-06-06  Adam Fedor  <fedor@gnu.org>

	* Source/cifframe.m (cifframe_from_info): Set value locations
	after prepping cifframe.

2002-06-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLog.m: patch by Jeff Teunissen to avoid adding date/time
	info when using syslog.
	* Source/NSURL.m: Fix loading codde to set self as client of handle.
	* Tools/AGSParser.m: Fix to avoid warnings about unimplemented protocols
	* Headers/gnustep/base/GSXML.h:
	* Headers/gnustep/base/NSArchiver.h:
	* Headers/gnustep/base/NSAutoreleasePool.h:
	* Headers/gnustep/base/NSCoder.h:
	* Headers/gnustep/base/NSDictionary.h:
	* Headers/gnustep/base/NSFileHandle.h:
	* Headers/gnustep/base/NSNotification.h:
	* Headers/gnustep/base/NSRunLoop.h:
	* Headers/gnustep/base/NSURL.h:
	* Headers/gnustep/base/NSURLHandle.h:
	* Source/GSHTTPURLHandle.m:
	* Source/NSArray.m:
	* Source/NSCoder.m:
	* Source/NSFileHandle.m:
	* Source/NSNotification.m:
	* Source/NSRunLoop.m:
	* Source/NSURLHandle.m:
	* Source/NSUnarchiver.m:
	* Source/externs.m:
	* Source/Additions/GSXML.m:
	Tidied for documentation purposes ... no substantial code changes

Wed Jun  5 17:46:47 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSLog.m (_NSLog_standard_printf_handler): Fixed
	syslogging of strings: add a NULL at the end of strings before
	feeding them to syslog.

2002-06-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSURL.h: Added a couple of ivars and removed
	non-standard methods.